@@ -3,6 +3,8 @@ package com.infoworks.lab.beans.tasks.definition;
 import com.infoworks.lab.beans.tasks.impl.TransactionStack;
 import com.infoworks.lab.rest.models.Message;
 
+import java.lang.reflect.InvocationTargetException;
+import java.util.concurrent.ExecutorService;
 import java.util.function.BiConsumer;
 
 public interface TaskStack {
@@ -15,15 +17,28 @@ public interface TaskStack {
         Canceled
     }
 
-    static <STACK extends TaskStack> TaskStack create(Class<STACK> type){
+    static <STACK extends TaskStack> TaskStack create(String typeName) {
         try {
-            return type.newInstance();
+            Class<STACK> type = (Class<STACK>) Class.forName(typeName
+                    , true
+                    , ClassLoader.getSystemClassLoader());
+            return type.getDeclaredConstructor().newInstance();
         } catch (InstantiationException e) {
             e.printStackTrace();
         } catch (IllegalAccessException e) {
             e.printStackTrace();
+        } catch (NoSuchMethodException e) {
+            e.printStackTrace();
+        } catch (InvocationTargetException e) {
+            e.printStackTrace();
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
         }
         return null;
+    }
+
+    static <STACK extends TaskStack> TaskStack create(Class<STACK> type) {
+        return create(type.getName());
     }
 
     static TaskStack create(){
@@ -32,6 +47,10 @@ public interface TaskStack {
 
     static TaskStack createSync(boolean sync){
         return new TransactionStack(sync);
+    }
+
+    static TaskStack createSync(boolean sync, ExecutorService service){
+        return new TransactionStack(sync, service);
     }
 
     TaskStack push(Task task);
